--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,5 +1,6 @@
 html, body, #app {
   height: 100%;
+  background: #f9f9f9;
 }
 
 /*a, a:hover, a:active {
@@ -12,5 +13,5 @@ html, body, #app {
 }
 
 .md-tooltip {
-  background: rgba(68, 79, 85, .75);
+  background: rgba(68, 79, 85, 1);
 }
