--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -15,3 +15,8 @@ html, body, #app {
 .md-tooltip {
   background: rgba(68, 79, 85, 1);
 }
+
+.leaflet-popup-content-wrapper {
+  border-radius: 2px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
