--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -3,10 +3,10 @@ html, body, #app {
   background: #f9f9f9;
 }
 
-/*a, a:hover, a:active {
-  color: #448aff !important;
+a, a:hover, a:active {
+  color: #ff9800 !important;
   text-decoration: none !important;
-}*/
+}
 
 .flex {
   flex: 1;
